package uoc.tfm.vmejia.speedrun.instance;

public enum GameState {
    RECRUITING,
    COUNTDOWN,
    LIVE;
}
