@startuml

title __INSTANCE's Class Diagram__\n

  namespace uoc.tfm.vmejia.speedrun {
    namespace instance {
      class uoc.tfm.vmejia.speedrun.instance.Arena {
          - almacen1 : Location
          - almacen2 : Location
          - canJoin : boolean
          - id : int
          - npcSpawn : Location
          - playerSpawn : Location
          - players : List<UUID>
          - sign : Location
          - signExit : Location
          + Arena()
          + addPlayer()
          + canJoin()
          + getAlmacen1()
          + getAlmacen2()
          + getEscena()
          + getGame()
          + getId()
          + getMinigame()
          + getNPCSpawn()
          + getPlayerSpawn()
          + getPlayers()
          + getSignExitLocation()
          + getSignLocation()
          + getState()
          + getWorld()
          + getalmAlmacen1()
          + getalmAlmacen2()
          + removePlayer()
          + reset()
          + sendMessage()
          + sendTitle()
          + setAlmacen1()
          + setAlmacen2()
          + setEscena()
          + setState()
          + start()
          + toggleCanJoin()
          + updateSign()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace instance {
      class uoc.tfm.vmejia.speedrun.instance.Countdown {
          - countdownSeconds : int
          + Countdown()
          + run()
          + start()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace instance {
      class uoc.tfm.vmejia.speedrun.instance.GUI {
          {static} + PonerMarcador()
          {static} + PublicarMarcador()
          {static} + publicarMarcadorInicial()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace instance {
      class uoc.tfm.vmejia.speedrun.instance.Game {
          - points : HashMap<UUID, Integer>
          + Game()
          + addPoint()
          + addPoint()
          + start()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace instance {
      enum GameState {
        COUNTDOWN
        LIVE
        RECRUITING
      }
    }
  }
  

  uoc.tfm.vmejia.speedrun.instance.Arena o-- uoc.tfm.vmejia.speedrun.var.Almacen : almAlmacen1
  uoc.tfm.vmejia.speedrun.instance.Arena o-- uoc.tfm.vmejia.speedrun.var.Almacen : almAlmacen2
  uoc.tfm.vmejia.speedrun.instance.Arena o-- uoc.tfm.vmejia.speedrun.instance.Countdown : countdown
  uoc.tfm.vmejia.speedrun.instance.Arena o-- uoc.tfm.vmejia.speedrun.var.Escena : escena
  uoc.tfm.vmejia.speedrun.instance.Arena o-- uoc.tfm.vmejia.speedrun.instance.Game : game
  uoc.tfm.vmejia.speedrun.instance.Arena o-- uoc.tfm.vmejia.speedrun.SpeedRun : minigame
  uoc.tfm.vmejia.speedrun.instance.Arena o-- uoc.tfm.vmejia.speedrun.instance.GameState : state
  uoc.tfm.vmejia.speedrun.instance.Countdown -up-|> org.bukkit.scheduler.BukkitRunnable
  uoc.tfm.vmejia.speedrun.instance.Countdown o-- uoc.tfm.vmejia.speedrun.instance.Arena : arena
  uoc.tfm.vmejia.speedrun.instance.Countdown o-- uoc.tfm.vmejia.speedrun.SpeedRun : minigame
  uoc.tfm.vmejia.speedrun.instance.Game o-- uoc.tfm.vmejia.speedrun.instance.Arena : arena


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
